Added notice about time to refresh data

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                 <!-- <p>Hiện tại đang có <strong id="number-of-codes">-</strong> mã sự kiện</p> -->
 
                 <h3>Danh sách mã</h3>
+                <small>Cứ mỗi 5 phút sẽ được cập nhật một lần</small>
                 <table class="table table-bordered table-striped">
                     <thead>
                         <tr>
